--- a/index_control.html
+++ b/index_control.html
@@ -107,7 +107,7 @@
 
         <div class="row">
           <div class="col-lg-7 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/about.png" class="img-fluid" alt="">
+            <img src="assets/img/about_control.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>About Us</h3>
