--- a/index_2.html
+++ b/index_2.html
@@ -45,7 +45,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index_control.html">S<span>.</span>ai</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index_2.html">S<span>.</span>ai</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
