--- a/index.html
+++ b/index.html
@@ -1,70 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stockalyzer</title>
 </head>
-<body>
-
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BM3W15HJ8S"></script>
 <script>
-    // Function to get the user's assigned variation from a cookie
-    function getUserVariation() {
-        const name = 'ab_test_variation=';
-        const decodedCookie = decodeURIComponent(document.cookie);
-        const cookieArray = decodedCookie.split(';');
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-        for (let i = 0; i < cookieArray.length; i++) {
-            let cookie = cookieArray[i];
-            while (cookie.charAt(0) === ' ') {
-                cookie = cookie.substring(1);
-            }
-            if (cookie.indexOf(name) === 0) {
-                return cookie.substring(name.length, cookie.length);
-            }
-        }
-        return null;
-    }
-
-    // Function to set a cookie with the user's assigned variation
-    function setUserVariation(variation) {
-        const date = new Date();
-        date.setTime(date.getTime() + (365 * 24 * 60 * 60 * 1000)); // Cookie expiration set to 1 year
-        const expires = 'expires=' + date.toUTCString();
-        document.cookie = 'ab_test_variation=' + variation + ';' + expires + ';path=/';
-    }
-
-    // Function to get a random variation (A or B)
-    function getRandomVariation() {
-        return Math.random() < 0.5 ? 'A' : 'B';
-    }
-
-    // Function to redirect the user based on the variation
-    function redirectUser(variation) {
-        switch (variation) {
-            case 'A':
-                window.location.href = 'index_1.html';
-                break;
-            case 'B':
-                window.location.href = 'index_2.html';
-                break;
-            default:
-                console.error('Invalid variation');
-        }
-    }
-
-    // Check if the user already has a variation assigned
-    var userVariation = getUserVariation();
-
-    // If not, assign a new random variation and set the cookie
-    if (!userVariation) {
-        userVariation = getRandomVariation();
-        setUserVariation(userVariation);
-    }
-
-    // Redirect the user
-    redirectUser(userVariation);
+    gtag('config', 'G-BM3W15HJ8S');
 </script>
 
+<body>
+
+
+    <script>
+        // Function to get the user's assigned variation from a cookie
+        function getUserVariation() {
+            const name = 'ab_test_variation=';
+            const decodedCookie = decodeURIComponent(document.cookie);
+            const cookieArray = decodedCookie.split(';');
+
+            for (let i = 0; i < cookieArray.length; i++) {
+                let cookie = cookieArray[i];
+                while (cookie.charAt(0) === ' ') {
+                    cookie = cookie.substring(1);
+                }
+                if (cookie.indexOf(name) === 0) {
+                    return cookie.substring(name.length, cookie.length);
+                }
+            }
+            return null;
+        }
+
+        // Function to set a cookie with the user's assigned variation
+        function setUserVariation(variation) {
+            const date = new Date();
+            date.setTime(date.getTime() + (365 * 24 * 60 * 60 * 1000)); // Cookie expiration set to 1 year
+            const expires = 'expires=' + date.toUTCString();
+            document.cookie = 'ab_test_variation=' + variation + ';' + expires + ';path=/';
+        }
+
+        // Function to get a random variation (A or B)
+        function getRandomVariation() {
+            return Math.random() < 0.5 ? 'A' : 'B';
+        }
+
+        // Function to redirect the user based on the variation
+        function redirectUser(variation) {
+            switch (variation) {
+                case 'A':
+                    window.location.href = 'index_1.html';
+                    break;
+                case 'B':
+                    window.location.href = 'index_2.html';
+                    break;
+                default:
+                    console.error('Invalid variation');
+            }
+        }
+
+        // Check if the user already has a variation assigned
+        var userVariation = getUserVariation();
+
+        // If not, assign a new random variation and set the cookie
+        if (!userVariation) {
+            userVariation = getRandomVariation();
+            setUserVariation(userVariation);
+        }
+
+        // Redirect the user
+        redirectUser(userVariation);
+    </script>
+
 </body>
+
 </html>
