Updated link for control group

--- a/index_2.html
+++ b/index_2.html
@@ -228,7 +228,7 @@
           <!-- CATEGORY NAV -->
           <!--eyJraWQiOiIxY2UxZTEzNjE3ZGNmNzY2YjNjZWJjY2Y4ZGM1YmFmYThhNjVlNjg0MDIzZjdjMzJiZTgzNDliMjM4MDEzNWI0IiwidHlwIjoiUEFUIiwiYWxnIjoiRVMyNTYifQ.eyJpc3MiOiJodHRwczovL2F1dGguY2FsZW5kbHkuY29tIiwiaWF0IjoxNzAwMTY2MDQzLCJqdGkiOiI4NzhmNTlmYS0zYjY0LTRlYmQtYmFmZC05YWVlYmFjNmVhNjkiLCJ1c2VyX3V1aWQiOiIxYmJkYTAxNy0zMWE2LTQzYWEtODYzNy0zYmVjYzIzZWFhZjAifQ._E95rfrgSfHJLsYzCNq0GZkmDByPdnRG-LvO7sSO-wXsG6nFi8rJrZvJ81gmvvWKBthRX2KUaljQxNhbhetYVQ-->
           <!-- Calendly inline widget begin -->
-          <div class="calendly-inline-widget" data-url="https://calendly.com/stockalyzer/30min"
+          <div class="calendly-inline-widget" data-url="https://calendly.com/stockalyst/one-on-one-meeting"
             style="min-width:320px;height:700px;"></div>
           <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
           <!-- Calendly inline widget end -->
